@@ -1,3 +1,9 @@
+Fri Feb 11 21:58:09 UTC 2011  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Generator/SdkGenerator.java:
+
+          Close the output stream after transforming.
+
 Fri Feb 11 21:45:58 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/plugin.properties:
